--- a/tabela.html
+++ b/tabela.html
@@ -16,64 +16,196 @@
 
 <style>
 :root { --bg:#f7f9fb; --top:#2b2f33; }
-body { font-family:Inter, system-ui, sans-serif; background:var(--bg); color:#222; user-select:none; margin:0; }
+body {
+    font-family: Inter, system-ui, sans-serif;
+    background: var(--bg);
+    color: #222;
+    user-select: none;
+    margin: 0;
+}
 
 /* HEADER */
-.topbar { background:var(--top); color:#fff; padding:12px 0; position:relative; z-index:1000; }
+.topbar {
+    background: var(--top);
+    color: #fff;
+    padding: 12px 0;
+    position: relative;
+    z-index: 1000;
+}
 .logo { font-weight:700; letter-spacing:.6px; }
 
 /* Links desktop */
-.nav-links a { color:#fff; margin-left:18px; text-decoration:none; font-weight:600; }
+.nav-links a {
+    color:#fff;
+    margin-left:18px;
+    text-decoration:none;
+    font-weight:600;
+}
 .nav-links a:hover { color:#cfcfcf; }
-.discord-btn { display:flex; align-items:center; gap:8px; padding:8px 16px; border-radius:12px; background:linear-gradient(135deg,#7289da,#99a9f0); color:#fff; text-decoration:none; font-weight:700; }
 
-/* Dropdown */
-.dropdown { position: relative; display:inline-block; margin-left:18px; font-weight:600; cursor:pointer; }
-.dropdown-toggle::after { content:" ▼"; font-size:0.7em; }
-.dropdown-menu { display:none; position:absolute; background-color:#2b2f33; min-width:150px; border-radius:6px; z-index:1000; }
-.dropdown-menu a { color:#fff; padding:10px 15px; text-decoration:none; display:block; }
+.discord-btn {
+    display:flex;
+    align-items:center;
+    gap:8px;
+    padding:8px 16px;
+    border-radius:12px;
+    background:linear-gradient(135deg,#7289da,#99a9f0);
+    color:#fff;
+    text-decoration:none;
+    font-weight:700;
+}
+
+/* Dropdown desktop */
+.dropdown {
+    position: relative;
+    display:inline-block;
+    margin-left:18px;
+    font-weight:600;
+    cursor:pointer;
+}
+.dropdown-toggle::after {
+    content:" ▼";
+    font-size:0.7em;
+}
+.dropdown-menu {
+    display:none;
+    position:absolute;
+    background-color:#2b2f33;
+    min-width:150px;
+    border-radius:6px;
+    z-index:1000;
+}
+.dropdown-menu a {
+    color:#fff;
+    padding:10px 15px;
+    text-decoration:none;
+    display:block;
+}
 .dropdown-menu a:hover { background-color:#3a3f45; }
 
-/* Hamburger menu mobile */
-.navbar-toggler { border:none; background:transparent; outline:none; display:none; }
-.navbar-toggler span { display:block; width:25px; height:3px; background:#fff; margin:5px 0; cursor:pointer; }
+/* HAMBURGER (ESCONDIDO NO PC) */
+.navbar-toggler {
+    border:none;
+    background:transparent;
+    outline:none;
+    display:none;
+}
+.navbar-toggler span {
+    display:block;
+    width:25px;
+    height:3px;
+    background:#fff;
+    margin:5px 0;
+}
+
+/* MOBILE */
 @media (max-width:768px) {
-    .d-md-flex { display:none !important; }
-    .navbar-toggler { display:block; }
+    .d-md-flex {
+        display:none !important;
+    }
 
-    .mobile-menu { display:none; background:var(--top); width:100%; }
-    .mobile-menu a { display:block; padding:12px 20px; color:#fff; font-weight:600; text-decoration:none; border-top:1px solid #3a3f45; }
-    .mobile-menu a:hover { background:#3a3f45; }
+    .navbar-toggler {
+        display:block;
+    }
 
-    .mobile-dropdown .dropdown-menu-mobile { display:none; background:#2b2f33; margin:0; }
-    .mobile-dropdown .dropdown-menu-mobile a { padding-left:30px; border-top:none; }
+    .mobile-menu {
+        display:none;
+        background:var(--top);
+        width:100%;
+    }
+
+    .mobile-menu a {
+        display:block;
+        padding:12px 20px;
+        color:#fff;
+        font-weight:600;
+        text-decoration:none;
+        border-top:1px solid #3a3f45;
+    }
+
+    .mobile-menu a:hover {
+        background:#3a3f45;
+    }
+
+    .mobile-dropdown .dropdown-menu-mobile {
+        display:none;
+        background:#2b2f33;
+    }
+
+    .mobile-dropdown .dropdown-menu-mobile a {
+        padding-left:30px;
+        border-top:none;
+    }
 }
 
 /* LAYOUT */
 .container-max { max-width:1100px; }
-.card-gradient { background:#fff; border-radius:16px; margin-top:18px; }
-.card-header-gradient { padding:26px; text-align:center; color:#fff; }
+.card-gradient {
+    background:#fff;
+    border-radius:16px;
+    margin-top:18px;
+}
+.card-header-gradient {
+    padding:26px;
+    text-align:center;
+    color:#fff;
+}
 
 /* COLUNAS */
-.service-columns { display:flex; flex-wrap:wrap; gap:20px; }
-.service-column { flex:1; min-width:300px; }
+.service-columns {
+    display:flex;
+    flex-wrap:wrap;
+    gap:20px;
+}
+.service-column {
+    flex:1;
+    min-width:300px;
+}
 
 /* TÍTULOS */
-.subtitulo { background:#e0e0e0; padding:8px; text-align:center; font-weight:700; border-radius:6px; }
+.subtitulo {
+    background:#e0e0e0;
+    padding:8px;
+    text-align:center;
+    font-weight:700;
+    border-radius:6px;
+}
 
 /* TABELA */
-table { border-collapse:collapse; width:100%; margin-top:10px; }
-th, td { border:1px solid #ddd; padding:12px; }
-th { background:#f1f1f1; font-weight:600; }
-.price-parceria { color:#1f8a3d; font-weight:700; background:rgba(31,138,61,.1); border-radius:6px; }
-.price-sem { color:#d13b3b; font-weight:700; background:rgba(209,59,59,.1); border-radius:6px; }
+table {
+    border-collapse:collapse;
+    width:100%;
+    margin-top:10px;
+}
+th, td {
+    border:1px solid #ddd;
+    padding:12px;
+}
+th {
+    background:#f1f1f1;
+    font-weight:600;
+}
+.price-parceria {
+    color:#1f8a3d;
+    font-weight:700;
+    background:rgba(31,138,61,.1);
+    border-radius:6px;
+}
+.price-sem {
+    color:#d13b3b;
+    font-weight:700;
+    background:rgba(209,59,59,.1);
+    border-radius:6px;
+}
 
 /* MOBILE TABLE */
-.table-responsive-mobile { width:100%; overflow-x:auto; }
-@media (max-width:768px) { table { min-width:520px; } }
-
-/* IMAGEM CONSERTO */
-.conserto-img { display:block; margin:16px auto; width:100%; max-width:420px; height:auto; object-fit:contain; border-radius:14px; }
+.table-responsive-mobile {
+    width:100%;
+    overflow-x:auto;
+}
+@media (max-width:768px) {
+    table { min-width:520px; }
+}
 </style>
 </head>
 
@@ -81,41 +213,48 @@ th { background:#f1f1f1; font-weight:600; }
 
 <header class="topbar">
 <div class="container container-max d-flex justify-content-between align-items-center">
+
     <div class="d-flex align-items-center gap-3">
         <img src="https://i.imgur.com/SP9nsky.png" style="height:90px;border-radius:8px;">
         <div class="logo">021 CUSTOMS</div>
     </div>
 
-    <!-- Hamburger mobile -->
+    <!-- HAMBURGER MOBILE -->
     <button class="navbar-toggler" type="button" aria-label="Abrir menu">
         <span></span><span></span><span></span>
     </button>
 
-    <!-- Menu desktop -->
+    <!-- MENU DESKTOP -->
     <nav class="d-md-flex nav-links align-items-center">
         <a href="index.html">Início</a>
+
         <div class="dropdown">
             <span class="dropdown-toggle">Preços</span>
             <div class="dropdown-menu">
                 <a href="calculadora.html">Calculadora</a>
             </div>
         </div>
+
         <a href="shop.html">Loja</a>
         <a href="relatorio.html">Relatório</a>
         <a href="funcionarios.html">Funcionários</a>
-        <a href="https://discord.com/invite/wunSmxVt" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
+        <a href="https://discord.com/invite/wunSmxVt" class="discord-btn">
+            <i class="fa-brands fa-discord"></i> Discord
+        </a>
     </nav>
 </div>
 
-<!-- Menu mobile -->
+<!-- MENU MOBILE -->
 <div class="mobile-menu">
     <a href="index.html">Início</a>
+
     <div class="mobile-dropdown">
         <a href="#" class="dropdown-toggle-mobile">Preços ▼</a>
         <div class="dropdown-menu-mobile">
             <a href="calculadora.html">Calculadora</a>
         </div>
     </div>
+
     <a href="shop.html">Loja</a>
     <a href="relatorio.html">Relatório</a>
     <a href="funcionarios.html">Funcionários</a>
@@ -136,40 +275,25 @@ th { background:#f1f1f1; font-weight:600; }
 </div>
 
 <div class="p-3 service-columns">
-<!-- OFICINA -->
 <div class="service-column">
 <div class="subtitulo">Serviços de Oficina</div>
+
 <div class="table-responsive-mobile">
 <table>
-<tr><th>Serviço</th><th class="text-end">Com Parceria</th><th class="text-end">Sem Parceria</th></tr>
+<tr>
+<th>Serviço</th>
+<th class="text-end">Com Parceria</th>
+<th class="text-end">Sem Parceria</th>
+</tr>
+
 <tr><td>Motor</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 150.000</td></tr>
 <tr><td>Bloco de Motor</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
 <tr><td>Som do Motor</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
 <tr><td>Freio</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 150.000</td></tr>
 <tr><td>Transmissão</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 280.000</td></tr>
-<tr><td>Turbo</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 250.000</td></tr>
-<tr><td>Hidráulica</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 95.000</td></tr>
-<tr><td>Blindagem</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 400.000</td></tr>
-<tr><td>Doors </td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Saia  </td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Parachoque Dianteiro</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Capô</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Escapamento</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Arch Cover</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Gaiola de Proteção</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Parachoque Traseiro</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Buzina</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Painel</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Para Lama</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Bancos</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Grelha</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 40.000</td></tr>
-<tr><td>Vidro</td><td class="text-end price-parceria">indefinido</td><td class="text-end price-sem">R$ 80.000</td></tr>
 </table>
 </div>
 </div>
-
-<!-- Serviços Pneus, Pintura e Conserto seguem o mesmo código do exemplo anterior -->
-
 </div>
 </div>
 
@@ -182,34 +306,46 @@ th { background:#f1f1f1; font-weight:600; }
 <script>
 document.getElementById("year").textContent = new Date().getFullYear();
 
-// Bloqueios
+/* BLOQUEIOS */
 document.addEventListener("contextmenu", e=>e.preventDefault());
 document.addEventListener("selectstart", e=>e.preventDefault());
 document.addEventListener("dragstart", e=>e.preventDefault());
+
 document.addEventListener("keydown", function(e) {
-    if (e.key==="F12" || (e.ctrlKey && e.shiftKey && ["i","j","c"].includes(e.key.toLowerCase())) || (e.ctrlKey && ["u","c","s","a","x","v"].includes(e.key.toLowerCase()))) {
-        e.preventDefault(); e.stopPropagation();
+    if (
+        e.key === "F12" ||
+        (e.ctrlKey && e.shiftKey && ["i","j","c"].includes(e.key.toLowerCase())) ||
+        (e.ctrlKey && ["u","c","s","a","x","v"].includes(e.key.toLowerCase()))
+    ) {
+        e.preventDefault();
+        e.stopPropagation();
     }
 });
 
-// Dropdown submenu desktop
+/* DROPDOWN DESKTOP */
 const dropdown = document.querySelector('.dropdown');
 const menu = dropdown.querySelector('.dropdown-menu');
-dropdown.addEventListener('mouseenter', () => menu.style.display='block');
-dropdown.addEventListener('mouseleave', () => menu.style.display='none');
-dropdown.querySelector('.dropdown-toggle').addEventListener('click', e=>{ e.preventDefault(); menu.style.display = menu.style.display==='block'?'none':'block'; });
 
-// Hamburger mobile toggle
+dropdown.addEventListener('mouseenter', () => menu.style.display = 'block');
+dropdown.addEventListener('mouseleave', () => menu.style.display = 'none');
+
+/* HAMBURGER */
 const toggler = document.querySelector('.navbar-toggler');
 const mobileMenu = document.querySelector('.mobile-menu');
-toggler.addEventListener('click', ()=> mobileMenu.style.display = mobileMenu.style.display==='block'?'none':'block');
 
-// Mobile dropdown submenu
+toggler.addEventListener('click', () => {
+    mobileMenu.style.display =
+        mobileMenu.style.display === 'block' ? 'none' : 'block';
+});
+
+/* DROPDOWN MOBILE */
 const mobileDropdownToggle = document.querySelector('.dropdown-toggle-mobile');
 const mobileDropdownMenu = document.querySelector('.dropdown-menu-mobile');
+
 mobileDropdownToggle.addEventListener('click', e => {
     e.preventDefault();
-    mobileDropdownMenu.style.display = mobileDropdownMenu.style.display==='block'?'none':'block';
+    mobileDropdownMenu.style.display =
+        mobileDropdownMenu.style.display === 'block' ? 'none' : 'block';
 });
 </script>
 
